Updated UI buttons

--- a/vue_app/src/assets/app.css
+++ b/vue_app/src/assets/app.css
@@ -1,8 +1,6 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import url('https://fonts.google.com/specimen/Roboto+Mono?sidebar.open=true&selection.family=Roboto+Mono:wght@500');
-
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-	
 	background-color: #ffae35 !important;
 	border-color: #ffffff !important;
 	border-width: 3px;
@@ -17,41 +15,81 @@
 	border-color: #00af0f;
 	background-color: #58eb6477;
 }
+
 .nothighlight {
 	color: #000000;
 	border-color: #ffffff00;
 	background-color: #ffffff00;
 }
-.image-container{
-	top:0;
-	left:0;
+
+.image-container {
+	top: 0;
+	left: 0;
 	margin: 0;
 	height: 100%;
 	width: 100%;
 	background-color: #FFEDBE;
 }
-.background{
+
+.background {
 	position: absolute;
-	top: 0; bottom: 0; left: 0; right: 0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	margin: auto;
 	width: 100vw;
 	height: 75vw;
 	max-width: 133.3vh;
 	max-height: 100vh;
 }
+
+.corner-1 {
+	position: absolute;
+	left: 1%;
+	top: 1%;
+}
+
+.corner-1a {
+	position: absolute;
+	left: 1%;
+	top: 1%;
+}
+
+.corner-1b {
+	position: absolute;
+	left: 1%;
+	top: 1%;
+}
+
+.corner-1c {
+	position: absolute;
+	left: 1%;
+	top: 1%;
+}
+
+.corner-2 {
+	position: absolute;
+	right: 1%;
+	top: 1%;
+}
+
 .corner-3 {
 	position: absolute;
 	left: 1%;
 	bottom: 1%;
 }
+
 .corner-4 {
 	position: absolute;
 	right: 1%;
 	bottom: 1%;
 }
-.robo-font{
+
+.robo-font {
 	font-family: 'Roboto Mono', monospace;
 }
-.swal2-styled{
+
+.swal2-styled {
 	background-color: #ffae35 !important;
 }
