--- a/vue_app/src/assets/items.css
+++ b/vue_app/src/assets/items.css
@@ -1,4 +1,3 @@
-
 .kitchen-item {
 	position: absolute;
 	z-index: inherit;
@@ -7,9 +6,28 @@
 	background-position-x: center;
 	background-position-y: bottom;
 }
+
 .kitchen-item:hover {
-  background-color: #5a5a5a80;
+	opacity: 0.8;
+	border-radius: 5px;
+	border: 3px;
+	border-style: solid;
+	border-color: #ffffff;
 }
+
 .kitchen-item:focus {
-  outline: none;
+	outline: none;
+}
+
+.highlight {
+	color: #ffffff;
+	border-radius: 5px;
+	border: none;
+	background-color: #ffffff70;
+}
+
+.nothighlight {
+	color: #000000;
+	border-color: #ffffff00;
+	background-color: #ffffff00;
 }
