--- a/vue_app/src/assets/items.css
+++ b/vue_app/src/assets/items.css
@@ -19,6 +19,16 @@
 	outline: none;
 }
 
+.kitchen-item:disabled{
+	opacity: 0.3;
+	border-radius: 5px;
+	border: none;
+}
+
+.unclickable{
+	pointer-events: none;
+}
+
 .highlight {
 	color: #ffffff;
 	border-radius: 5px;
@@ -30,6 +40,17 @@
 	color: #000000;
 	border-color: #ffffff00;
 	background-color: #ffffff00;
+}
+
+.ItemShelf {
+	margin: 2.5% auto;
+	left: 0;
+	right: 0;
+	height: 48%;
+	width: 100%;
+	z-index: 4;
+	position: absolute;
+	top: 0;
 }
 
 	
