--- a/vue_app/src/assets/app.css
+++ b/vue_app/src/assets/app.css
@@ -16,7 +16,6 @@
 	background-color: #ffffff;
 	background-size: contain;
 	background-image: url('../assets/backgrounds/WhiteBG.png');
-
 }
 
 .background {
@@ -31,7 +30,7 @@
 	height: 93.70424597364568vw;
 	max-width: 106.71875vh;
 	max-height: 100vh;
-/* PC resolution
+	/* PC resolution
 	width: 100vw;
 	height: 75vw;
 	max-width: 133.3vh;
@@ -47,7 +46,7 @@
 	top: 1%;
 }
 
-.ui-btn{
+.ui-btn {
 	position: absolute;
 	height: 8%;
 	width: 21.5%;
@@ -58,8 +57,13 @@
 	border: none;
 	z-index: 1000;
 }
+
 .ui-btn:focus {
 	outline: none;
+}
+
+.ui-btn:active {
+	opacity: 0.7;
 }
 
 .home-btn {
@@ -83,7 +87,6 @@
 .next-btn {
 	top: 3%;
 	left: 5%;
-	
 	height: 8%;
 	width: 20%;
 	background-image: url("../assets/uibuttons/NextButton.png");
@@ -110,20 +113,19 @@
 .robo-font {
 	font-family: 'Roboto Mono', monospace;
 }
-@font-face { 
-    font-family: 'Berlin Sans FB';
-    src: url('./fonts/BerlinSansFB-Reg.woff2') format('woff2'),
-        url('./fonts/BerlinSansFB-Reg.woff') format('woff'),
-        url('./fonts/BerlinSansFB-Reg.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+
+@font-face {
+	font-family: 'Berlin Sans FB';
+	src: url('./fonts/BerlinSansFB-Reg.woff2') format('woff2'), url('./fonts/BerlinSansFB-Reg.woff') format('woff'), url('./fonts/BerlinSansFB-Reg.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 .berlin-font {
 	font-family: 'Berlin Sans FB';
-    font-weight: normal;
-    font-style: normal;
+	font-weight: normal;
+	font-style: normal;
 }
 
 .swal2-styled {
