Functioning SVG bowls, universal pH scale added and fixed all "back" buttons.

--- a/vue_app/src/assets/app.css
+++ b/vue_app/src/assets/app.css
@@ -24,7 +24,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin: auto auto auto auto;
+	margin: auto auto auto 25%;
 	/* Ipad Res*/
 	width: 100vw;
 	height: 93.70424597364568vw;
