Included trashcan and static bowl pouring animation. Solved warnings and typos.

--- a/vue_app/src/assets/items.css
+++ b/vue_app/src/assets/items.css
@@ -36,7 +36,7 @@
 	background-color: #ffffff70;
 }
 
-.nothighlight {
+.notHighlight {
 	color: #000000;
 	border-color: #ffffff00;
 	background-color: #ffffff00;
