--- a/vue_app/src/assets/items.css
+++ b/vue_app/src/assets/items.css
@@ -5,14 +5,13 @@
 	background-repeat: no-repeat;
 	background-position-x: center;
 	background-position-y: bottom;
+	border: none;
 }
 
 .kitchen-item:hover {
 	opacity: 0.8;
 	border-radius: 5px;
-	border: 3px;
-	border-style: solid;
-	border-color: #ffffff;
+	border: 3px solid #ffffff;
 }
 
 .kitchen-item:focus {
@@ -20,9 +19,9 @@
 }
 
 .kitchen-item:disabled{
-	opacity: 0.3;
 	border-radius: 5px;
 	border: none;
+	height: 80%;
 }
 
 .unclickable{
